--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,16 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <div class="qqcoisa">
+    <video id="video"
+           #videoPlayer
+           width="100%"
+           height="auto"
+           src="https://videoaulas.infra.grancursosonline.com.br/564afe295161b94c3dcc76ab8ec071b3/eab5ebae49838bfc0226ada30231e6bc/eab5ebae49838bfc0226ada30231e6bc.mp4" controls="true">
+    </video>
+  </div>
+  <div class="qqcoisa">
+    <canvas id="c1" #canvas1 width="100%" height="auto"></canvas>
+    <canvas id="c2" #canvas2 width="100%" height="auto"></canvas>
+  </div>
 </ion-content>
